--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,16 @@
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Yanone Kaffeesatz', sans-serif;
+body {
+	background: #F4F2EE;
+}
+
+body, h2, h3, h4, h5, h6, p {
+	/*font-family: 'Yanone Kaffeesatz', sans-serif;*/
+	font-family: 'Open Sans', sans-serif;
+}
+
+
+.text-hero {
+	/*font-family: 'Libre Baskerville', serif;*/
+	font-family: 'Roboto Slab', serif;
+	font-size: 4em;
+	margin: 2em 1em;
 }
